Fix weather attributes - zip, id to zipp, idd. add swagger docs update to swagger ver 1.0.5
